# reorder

./: .gitignore  CLAUDE.md  PLAN.md  README.md  REMAINING_STEPS.md  biome.json  package.json  screenshot.ts  start.ts
rust/cluster-tool/: Cargo.toml
rust/cluster-tool/src/: main.rs
rust/group-similarity/: Cargo.toml  build.rs
rust/group-similarity/src/: main.rs
scripts/: diagnose_distances.ts  extract_features.py  precompute_text_embeddings.py  test_patches.py  test_patches_dinov3.py  test_patches_pooled.py  test_scoring.ts
src/: cache-utils.ts  cluster.ts  log.ts  nn-query.ts  rename.ts  server.ts  tags-db.ts  thumbnails.ts
src/client/: App.tsx  index.html  index.tsx  styles.css  types.ts
src/client/components/: AppShellHeader.tsx  AskClaudeButton.tsx  ExpandedGroupItem.tsx  FolderPopover.tsx  GroupPicker.tsx  GroupPopover.tsx  GroupThumbGrid.tsx  Lightbox.tsx  Modal.tsx  OrganizeModal.tsx  PathsModal.tsx  PreviewModal.tsx  ReviewModal.tsx  SearchBar.tsx  Slideshow.tsx  SortableCard.tsx  SortableFolderCard.tsx  SortableGroupCard.tsx  Toast.tsx  Toolbar.tsx  TrashIcon.tsx  TrashModal.tsx
src/client/hooks/: useDismissOnOutside.ts  useDragHandlers.ts  useGridLayout.ts  useGroupOperations.ts  useKeyboardShortcuts.ts  useRemeasureVirtualRows.ts  useRouter.ts  useTagViewInit.ts
src/client/stores/: clusterStore.ts  dndStore.ts  folderStore.ts  groupStore.ts  imageStore.ts  mergeSuggestionsStore.ts  nnQueryStore.ts  selectionStore.ts  tagStore.ts  trashStore.ts  uiStore.ts
src/client/styles/: base.css  buttons.css  card.css  cluster.css  compare.css  grid.css  (+11 more)
(+32 files in other folders)
