[package]
name = "cluster-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
byteorder = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
